--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.jpg"
+  avatar           : "profile-square.jpg"
   name             : "Taken at MoMA in 2024"
   pronouns         : # example: "she/her"  
   bio              : "Medical doctor and researcher at Ajou University, specializing in the intersection of medicine and technology"
