edited about.md once again

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "profile-square.jpg"
   name             : "Taken at MoMA in 2024"
   pronouns         : # example: "she/her"  
-  bio              : "Medical doctor and researcher at Ajou University, specializing in the intersection of medicine and technology"
+  bio              : "Medical doctor and researcher at Ajou University, seeking to bridge medicine and technology"
   location         : "Suwon, South Korea"
   employer         : "Ajou University"
   uri              : # URL
