--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile-square.jpg"
-  name             : "Taken at MoMA in 2024"
+  avatar           : "cold-spring.jpg"
+  name             : ""
   pronouns         : # example: "she/her"  
   bio              : "Medical doctor and researcher at Ajou University, seeking to bridge medicine and technology"
   location         : "Suwon, South Korea"
